--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+curitiba (0.7) stable; urgency=medium
+
+  * update versions
+
+ -- André Roth <neolynx@gmail.com>  Sun, 28 Jul 2019 21:21:15 +0200
+
 curitiba (0.6) stable; urgency=medium
 
   * add lxd deployment
